{
    "name": "PlayerCameraInputActionMap",
    "maps": [
        {
            "name": "Player",
            "id": "494588b8-5b86-43c2-b3ea-7852093e74c5",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "05123fe9-13b0-4dc0-bd3f-2ab514dca5f2",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "68d6efea-6927-423a-a3c4-7b1827a6bdf2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "eafd239f-08a7-4fee-8dd0-c450882f071a",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "e2e68010-8a8a-4a7f-9864-5bd993c5f6c2",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "6d7a5931-4ddf-4c6c-b0e3-0283222ae2d2",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "5bfc8d0c-32e1-4acf-8f82-56f20b68ec7a",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "0d32f5cd-d172-49ed-9bce-8bb383494efd",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "474ae0e8-b44f-4634-9973-533ee9075faf",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Camera",
            "id": "d93a39f0-fbb2-4282-b282-e6bf6face206",
            "actions": [
                {
                    "name": "SwitchView",
                    "type": "Button",
                    "id": "f1d36e8d-086d-4eb4-97f5-019e9d5cefbf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "83b009c1-8e46-487d-88e9-d08994623f01",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchView",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "655d9e81-20b9-4840-9445-6782456ea6e3",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchView",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "MainMenu",
            "id": "794276a2-b99b-4976-89f7-80a113b0f822",
            "actions": [
                {
                    "name": "Back",
                    "type": "Button",
                    "id": "9f99c884-d67e-4875-9fac-7a417c72e9a9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5904b35e-a47d-4274-821f-066c88036c5a",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Back",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f0890aac-32dc-406a-9eec-e51626ed61e6",
                    "path": "<Keyboard>/backspace",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Back",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Testing",
            "id": "eb9267e1-6f15-499f-b903-73525133e1f4",
            "actions": [
                {
                    "name": "PlayLoop",
                    "type": "Button",
                    "id": "3bf74f5d-c30e-4bd0-8234-56c1c3dcb1da",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlayOneShot",
                    "type": "Button",
                    "id": "cb6da515-41a4-489f-9621-74cae820c1a7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlaySound",
                    "type": "Button",
                    "id": "5969a2f1-9cd2-4baf-a36d-3614e949e39c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "StopSound",
                    "type": "Button",
                    "id": "8c7e30dd-4217-429c-abbf-59390fceae39",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "86f2b911-e12a-4aa8-ae59-c853c3e21294",
                    "path": "<Keyboard>/l",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayLoop",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fdfcdde2-d259-4cd0-b417-f6ae5372b721",
                    "path": "<Keyboard>/o",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayOneShot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "81d5a3a5-9541-46d9-992a-157acc85eaeb",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlaySound",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2c195600-c6ec-4c75-8451-55bc1789af7d",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StopSound",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}